--- a/QL_CDC-master/QL_CDC/Views/Admin/ChartTheoLoai.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/ChartTheoLoai.cshtml
@@ -6,7 +6,7 @@
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 <div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">THỐNG KÊ -</span> Sản phẩm theo mặt hàng</h4>
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">THỐNG KÊ -</span> Bài đăng theo danh mục </h4>
     <div class="card">
         <figure class="highcharts-figure">
             <div id="container">
@@ -56,18 +56,18 @@
                         name: ' ',
                         colorByPoint: true,
                         data: [{
-                            name: 'Đồ dùng cá nhân',
+                            name: 'Thời trang, đồ dùng cá nhân',
                             y: data.mh1,
                             sliced: true,
                             selected: true
                         }, {
-                            name: 'Đồ dùng học tập',
+                            name: 'Đồ điện tử',
                             y: data.mh2
                         }, {
-                            name: 'Đồ nội thất',
+                            name: 'Gia dụng, nội thất',
                             y: data.mh3
                         }, {
-                            name: 'Phương tiện di chuyển',
+                            name: 'Xe cộ',
                             y: data.mh4
                         }, {
                             name: 'Khác',
