--- a/QL_CDC-master/QL_CDC/Views/Admin/ChiTietNguoiDung.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/ChiTietNguoiDung.cshtml
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel3">Chi tiết người dùng</h5>
+                <h5 class="modal-title" id="exampleModalLabel3">Thông tin người dùng</h5>
                 <button type="button"
                         class="btn-close"
                         data-bs-dismiss="modal"
