--- a/QL_CDC-master/QL_CDC/Views/Admin/DuyetBaiChuaDuyet.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/DuyetBaiChuaDuyet.cshtml
@@ -4,14 +4,14 @@
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý /</span> Quán lý bài đăng sản phẩm</h4>
     <div class="card">
-        <h5 class="card-header">Danh sách bài đăng chưa duyệt</h5>
+        <h5 class="card-header">Danh sách bài đăng chờ duyệt</h5>
         <div class="table-responsive text-nowrap">
             <div class="table-responsive text-nowrap">
                 <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>Gian hàng</th>
-                            <th>Tên sản phẩm</th>
+                            <th>Tiêu đề</th>
                             <th></th>
                             <th>Giá</th>
                             <th>Trạng thái</th>
@@ -66,7 +66,7 @@
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel4">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel4">Chi tiết bài đăng bán</h5>
                 <button type="button"
                         class="btn-close"
                         data-bs-dismiss="modal"
