--- a/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonBan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonBan.cshtml
@@ -10,7 +10,7 @@
     var MSHD = "";
 }
 <div class="text-center mb-4">
-    <h2 class="section-title px-5"><span class="px-2" >Chi tiết hóa đơn</span></h2>
+    <h2 class="section-title px-5"><span class="px-2" >Chi tiết đơn hàng bán</span></h2>
 </div>
 <!-- Checkout Start -->
 <div class="container-fluid pt-5">
@@ -31,14 +31,14 @@
                         <label>Địa chỉ giao hàng</label>
                         <textarea class="form-control" placeholder="Nhập địa chỉ giao hàng của bạn" style="min-height: 20vh; border: 2px solid #0f893b; color: #0f893b" disabled>@Model.NguoiMua.DiaChi</textarea>
                     </div>
-                    <div class="col-md-12 form-group" style="margin-top: 10px">
+                    @*<div class="col-md-12 form-group" style="margin-top: 10px">
                         <div class="table-themsanpham" style="margin-top:0vh;">
                             <div class="btnaddfile" style="width:30%" onclick="MoChatMoi('', '@Model.NguoiMua.MSSV')" id="mochat">
                                 <i class="fa fa-comments mr-1"></i> Chat
                             </div>
                             <div style="width:60%"></div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
