--- a/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
@@ -6,7 +6,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 <div class="text-center mb-4" style="margin-top:-20px; ">
-    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Hóa đơn đã đặt</span></h2>
+    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Đơn hàng đã đặt</span></h2>
 </div>
 <div class="container-fluid pt-5" style="height:1000px">
     <div class="row px-xl-5">
@@ -18,7 +18,7 @@
                 <strong>Tình trạng</strong>
             </div>
             <div style="width: 25%">
-                <strong>Ngày lập</strong>
+                <strong>Thời điểm đặt hàng</strong>
             </div>
             <div style="width: 25%">
                 <strong>Tổng giá</strong>
