--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChonLoaiSPThem.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChonLoaiSPThem.cshtml
@@ -45,7 +45,7 @@
                 <li onclick="ThemGiuong()"><a href="#">Giường, chăn ga gối nệm</a></li>
                 <li onclick="ThemDungCuNhaBep()"><a href="#">Dụng cụ nhà bếp</a></li>
                 <li onclick="ThemQuatDieuHoa()"><a href="#">Quạt, điều hòa</a></li>
-                <li onclick="ThemDen()"><a href="#">Đèn</a></li>
+                <li onclick="ThemDen()"><a href="#">Thiết bị vệ sinh</a></li>
             </ul>
         </li>
         <li>
