--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemLaptop.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemLaptop.cshtml
@@ -9,7 +9,7 @@
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Đồ điện tử - Điện thoại</span></h4>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Đồ điện tử - Laptop</span></h4>
     </div>
 
     <div class="table-themsanpham2">
