--- a/QL_CDC-master/QL_CDC/Views/Shared/_SecondLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_SecondLayout.cshtml
@@ -31,9 +31,9 @@
 </head>
 
 <body>
-    @if (User.Identity.IsAuthenticated)
+    @*@if (User.Identity.IsAuthenticated)
     {
-@await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")}
+@await Html.PartialAsync("../SanPham/_ChatPartial.cshtml")}*@
     <!-- Topbar Start -->
     <div class="container-fluid">
         <div class="row align-items-center py-3 px-xl-5">
