--- a/QL_CDC-master/QL_CDC/Views/Shared/_TimKiemLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_TimKiemLayout.cshtml
@@ -107,12 +107,12 @@
                             <li onclick="DoNoiThat()"><a href="#">Giường, chăn ga gối nệm</a></li>
                             <li onclick="DoNoiThat()"><a href="#">Dụng cụ nhà bếp</a></li>
                             <li onclick="DoNoiThat()"><a href="#">Quạt, điều hòa</a></li>
-                            <li onclick="DoNoiThat()"><a href="#">Đèn</a></li>
+                            <li onclick="DoNoiThat()"><a href="#">Thiết bị vệ sinh</a></li>
                         </ul>
                     </li>
                     <li>
                         <div class="dropdownlink">
-                            <h5>
+                            <h5 onclick="PhuongTien()">
                                 <i class="fa fa-motorcycle" aria-hidden="true"></i> Xe cộ
                                 @*<i class="fa fa-chevron-down" aria-hidden="true"></i>*@
                             </h5>
