--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangNhap.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangNhap.cshtml
@@ -145,6 +145,7 @@
                                        id="tk"
                                        asp-for="MSSV"
                                        autofocus />
+                                <span asp-validation-for="MSSV" class="text-danger" ></span>
                             </div>
                             <div class="mb-3 form-password-toggle">
                                 <div class="d-flex justify-content-between">
@@ -160,6 +161,7 @@
                                            aria-describedby="password" />
                                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                                 </div>
+                                <span asp-validation-for="MatKhau" class="text-danger" ></span>
                             </div>
                             <div class="mb-3">
                                 <div class="form-check">
