--- a/QL_CDC-master/QL_CDC/Views/Admin/BaiKhongDuyet.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/BaiKhongDuyet.cshtml
@@ -11,7 +11,7 @@
                     <thead>
                         <tr>
                             <th>Gian hàng</th>
-                            <th>Tên sản phẩm</th>
+                            <th>Tiêu đề</th>
                             <th>Giá</th>
                             <th>Trạng thái</th>
                             <th>  </th>
