--- a/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonMua.cshtml
@@ -1,12 +1,11 @@
 ﻿@model TongThanhToan
-@{
-    ViewData["Title"] = "ChiTietHoaDonMua";
-    Layout = "~/Views/Shared/_ThirdLayout.cshtml";
-}
+@{ ViewData["Title"] = "ChiTietHoaDonMua";
+                Layout = "~/Views/Shared/_ThirdLayout.cshtml"; }
+@{ var MSHD = ""; }
 <script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 
 <div class="text-center mb-4">
-    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Chi tiết hóa đơn</span></h2>
+    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Chi tiết đơn hàng mua</span></h2>
 </div>
 <!-- Checkout Start -->
 <div class="container-fluid pt-5">
@@ -38,71 +37,121 @@
 
                 @foreach (var HD in Model.HD)
                 {
-            <div class="card-body">
-                <table class="table  mb-0">
+                    MSHD = HD.MaHoaDon;
+    <div class="card-body">
+        <table class="table  mb-0">
+            <tr>
+                <td><h5 class="font-weight-medium mb-3">Mã: </h5></td>
+                <td><h5 class="font-weight-medium mb-3">@HD.MaHoaDon</h5></td>
+            </tr>
+            <tr >
+                <td><h5 class="font-weight-medium mb-3">Người bán: </h5></td>
+                <td><h5 class="font-weight-medium mb-3" >@HD.NguoiBan.TenHienThi</h5></td>
+            </tr>
+            <tr>
+                <td><h5 class="font-weight-medium mb-3">Tình trạng: </h5></td>
+                <td><h5 class="font-weight-medium mb-3" id="tinhtrang">@HD.TinhTrang</h5></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+        <div style="overflow: auto;">
+            <table class="table table-bordered text-center mb-0" style="font-size: 13px;">
+                <thead class="bg-secondary text-dark">
                     <tr>
-                        <td><h5 class="font-weight-medium mb-3">Mã: </h5></td>
-                        <td><h5 class="font-weight-medium mb-3">@HD.MaHoaDon</h5></td>
+                        <th colspan="2">Sản phẩm</th>
+                        <th>Đơn giá</th>
+                        <th>Số lượng</th>
+                        <th>Giá</th>
                     </tr>
-                    <tr>
-                        <td><h5 class="font-weight-medium mb-3">Người bán: </h5></td>
-                        <td><h5 class="font-weight-medium mb-3">@HD.NguoiBan.TenHienThi</h5></td>
-                    </tr>
-                    <tr>
-                        <td><h5 class="font-weight-medium mb-3">Tình trạng: </h5></td>
-                        <td><h5 class="font-weight-medium mb-3">@HD.TinhTrang</h5></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
-                <div style="overflow: auto;">
-                    <table class="table table-bordered text-center mb-0" style="font-size: 13px;">
-                        <thead class="bg-secondary text-dark">
-                            <tr>
-                                <th colspan="2">Sản phẩm</th>
-                                <th>Đơn giá</th>
-                                <th>Số lượng</th>
-                                <th>Giá</th>
-                            </tr>
-                        </thead>
-                        <tbody class="align-middle">
-                            @foreach (var item in HD.SanPham)
-                            {
-                                string dongia = string.Format("{0:#,##0.########}", item.dongiasp);
-                                string tonggia = string.Format("{0:#,##0.########}", (item.dongiasp * item.soluongsp));
-                                <tr>
-                                    <td class="align-middle"><img src="@item.anhdaidien" alt="" style="width: 40px; height: 40px;"> </td>
-                                    <td class="align-middle">@item.tensp </td>
-                                    <td class="align-middle">@dongia</td>
-                                    <td class="align-middle">
-                                        <div class="mx-auto align-middle">
-                                            @item.soluongsp
-                                        </div>
-                                    </td>
-                                    <td class="align-middle">@tonggia</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-
-                </div>
-                <hr class="mt-0">
-                @{
-                    string HDTien = string.Format("{0:#,##0.########}", HD.TongGia);
-                }
-                <div class="card-footer border-secondary bg-transparent">
-                    <div class="d-flex justify-content-between mt-2">
-                        <h5 class="font-weight-bold">Số tiền phải trả cho hóa đơn</h5>
-                        <h5 class="font-weight-bold">@HDTien</h5>
-                    </div>
-                </div>
-                <hr style="border-top: 5px solid #0f893b">
+                </thead>
+                <tbody class="align-middle">
+                    @foreach (var item in HD.SanPham)
+                    {
+                        string dongia = string.Format("{0:#,##0.########}", item.dongiasp);
+                        string tonggia = string.Format("{0:#,##0.########}", (item.dongiasp * item.soluongsp));
+    <tr>
+        <td class="align-middle"><img src="@item.anhdaidien" alt="" style="width: 40px; height: 40px;"> </td>
+        <td class="align-middle">@item.tensp </td>
+        <td class="align-middle">@dongia</td>
+        <td class="align-middle">
+            <div class="mx-auto align-middle">
+                @item.soluongsp
             </div>
-                }
+        </td>
+        <td class="align-middle">@tonggia</td>
+    </tr>}
+                </tbody>
+            </table>
+
+        </div>
+        <hr class="mt-0">
+        @{ string HDTien = string.Format("{0:#,##0.########}", HD.TongGia); }
+        <div class="card-footer border-secondary bg-transparent">
+            <div class="d-flex justify-content-between mt-2">
+                <h5 class="font-weight-bold">Số tiền phải trả cho hóa đơn</h5>
+                <h5 class="font-weight-bold">@HDTien</h5>
+            </div>
+        </div>
+        <hr style="border-top: 5px solid #0f893b">
+        <br />
+        <div class="table-themsanpham" style="margin-top:-2vh;">
+            <div style="width:20%"></div>
+            <div class="btnaddfile" style="width:60%" id="nhanhang" onclick="DaNhan('@HD.MaHoaDon')">Đã nhận được hàng</div>
+            <div style="width:20%"></div>
+        </div>
+        @*<div class="tab-pane fade" id="tab-pane-3">
+                @await Html.PartialAsync("../SanPham/_NhanXetPartial.cshtml")
+            </div>*@
+    </div>}
             </div>
         </div>
     </div>
 </div>
 <!-- Checkout End -->
+
+<script>
+
+
+    //ready
+    $(document).ready(function () {
+        var x = $("#tinhtrang").text();
+        console.log(x);
+        nutNhanHang(x);
+    })
+
+    function nutNhanHang(tt) {
+        if (tt == "Đang giao hàng") {
+            document.getElementById("nhanhang").style.display = 'block';
+            console.log("cfanhansc");
+        }
+        else if (tt != "Đang giao hàng") {
+            document.getElementById("nhanhang").style.display = 'none';
+            console.log("huy");
+            
+        }
+            
+
+    }
+
+    // Xac nhan hoa don
+    function DaNhan(ms) {
+        console.log(ms);
+            if (window.confirm("Xác nhận đã nhận hàng?")) {
+                $.ajax({
+                    url: '/HoaDon/DaNhanHang',
+                    type: 'post',
+                    data: {
+                        mshd: ms,
+                    },
+                    success: function (data) {
+                        window.location.href = '/HoaDon/DanhSachHoaDonNguoiMua'
+                        console.log("da nhan");
+                    }
+                })
+            }
+        
+    }
+</script>
