--- a/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiBan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiBan.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center mb-4">
-    <h2 class="section-title px-5"><span class="px-2">Hóa đơn được đặt</span></h2>
+    <h2 class="section-title px-5"><span class="px-2">Đơn hàng bán</span></h2>
 </div>
 <div class="container-fluid pt-5">
     <div class="row px-xl-5">
