--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
@@ -46,16 +46,21 @@
                 <h3 class="font-weight-semi-bold mb-2" style="width: 28%"> @dongia </h3>
                 @if (dongia != giagoc)
                 {
-    <h3 class="font-weight-semi-bold mb-3" style="width: 28%"><del>@giagoc </del></h3>}
+        <h3 class="font-weight-semi-bold mb-3" style="width: 28%"><del>@giagoc </del></h3>}
             </div>
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Đăng bởi:</strong></p>
+                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Người đăng tin:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">
                     @Model.nguoidangsp
-                    <small id="mochat">
+                    @*<small id="mochat">
 
-                    </small>
+                </small>*@
                 </p>
+            </div>
+            <div class="d-flex mb-3" style="width: 100%;display: flex;">
+                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số điện thoại:</strong></p>               
+                
+                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.sdt</p>
             </div>
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Ngày đăng:</strong></p>
@@ -66,13 +71,13 @@
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.loai</p>
             </div>
             @*<div class="d-flex mb-3" style="width: 100%;display: flex;">
-                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Hãng sản xuất:</strong></p>
-                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.nsx</p>
-                </div>*@
+            <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Hãng sản xuất:</strong></p>
+            <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.nsx</p>
+        </div>*@
             @*<div class="d-flex mb-3" style="width: 100%;display: flex;">
-                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Thời gian sử dụng:</strong></p>
-                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.thoigiansp tháng</p>
-                </div>*@
+            <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Thời gian sử dụng:</strong></p>
+            <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.thoigiansp tháng</p>
+        </div>*@
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số lượng:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.soluongsp sản phẩm</p>
@@ -84,7 +89,7 @@
                             <i class="fa fa-minus"></i>
                         </button>
                     </div>
-                    <input type="text" id="soluongsp" style="height: 37px;" class="form-control bg-secondary text-center" value="1" oninput="ChiNhapSo(this); KiemTraSoLuongSanPham(@Model.soluongsp);">
+                    <input type="text" id="soluongsp" style="height: 35px;" class="form-control bg-secondary text-center" value="1" oninput="ChiNhapSo(this); KiemTraSoLuongSanPham(@Model.soluongsp);">
                     <div class="input-group-btn">
                         <button class="btn btn-primary btn-plus" onclick="Tang1(@Model.soluongsp)">
                             <i class="fa fa-plus"></i>
