--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemDen.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemDen.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Nội thất, gia dụng - Đèn</span></h4>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Nội thất, gia dụng - Thiết bị vệ sinh</span></h4>
     </div>
     <br>
     <div class="table-themsanpham">
