--- a/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
@@ -144,7 +144,7 @@
                         <ul class="menu-sub">
                             <li class="menu-item">
                                 <a href="@Url.Action("DuyetBaiChuaDuyet","Admin")" class="menu-link">
-                                    <div data-i18n="Account">Bài đăng chưa duyệt</div>
+                                    <div data-i18n="Account">Bài đăng chờ duyệt</div>
                                 </a>
                             </li>
                             <li class="menu-item">
