--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangKy.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangKy.cshtml
@@ -222,6 +222,7 @@
                                        id="mssv"
                                        asp-for="MSSV"
                                        autofocus />
+                                <span asp-validation-for="MSSV" class="text-danger" ></span>
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Họ & tên</label>
@@ -229,6 +230,7 @@
                                        class="form-control"
                                        id="hoten"
                                        asp-for="HoTen" />
+                                <span asp-validation-for="HoTen" class="text-danger"></span>
                             </div>
                             <div class="mb-3 form-password-toggle">
                                 <div class="d-flex justify-content-between">
@@ -244,6 +246,7 @@
                                            aria-describedby="password" />
                                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                                 </div>
+                                <span asp-validation-for="MatKhau" class="text-danger" ></span>
                             </div>
                             <div class="mb-3 form-password-toggle">
                                 <div class="d-flex justify-content-between">
@@ -259,6 +262,7 @@
                                            aria-describedby="password" />
                                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                                 </div>
+                                <span asp-validation-for="XacNhanMatKhau" class="text-danger"></span>
                             </div>
                             
                             <div class="mb-3">
@@ -267,6 +271,7 @@
                                        class="form-control"
                                        id="sdt"
                                        asp-for="SDT" />
+                                <span asp-validation-for="SDT" class="text-danger"></span>
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
@@ -274,6 +279,7 @@
                                        class="form-control"
                                        id="email"
                                        asp-for="Email" />
+                                <span asp-validation-for="Email" class="text-danger" ></span>
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Địa chỉ</label>
@@ -281,6 +287,7 @@
                                        class="form-control"
                                        id="dc"
                                        asp-for="DiaChi" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
 
 
