--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DoiMatKhau.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DoiMatKhau.cshtml
@@ -4,7 +4,7 @@
 <script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 <div class="container-fluid pt-5" style="margin-top:-50px">
     <div class="text-center mb-4">
-        <h3 class="section-title px-5"><span class="px-2">Đổi mật khẩu</span></h3>
+        <h3 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Đổi mật khẩu</span></h3>
     </div>
     <div class="row px-xl-5 pb-3">
         <div class="col-lg-12">
