--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
@@ -58,9 +58,15 @@
                 </p>
             </div>
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số điện thoại:</strong></p>               
+                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số điện thoại:</strong></p>
+
+
+                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.sdt <img src="~/template/img/zalo.png" style="border-radius:30%"
+     height="35"
+     width="35"
+     id=""
+     onclick="location.href='https://id.zalo.me/account?continue=https%3A%2F%2Fchat.zalo.me%2F%3Fnull'" /></p>
                 
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.sdt</p>
             </div>
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Ngày đăng:</strong></p>
