--- a/QL_CDC-master/QL_CDC/Views/SanPham/TimKiem.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/TimKiem.cshtml
@@ -1,8 +1,12 @@
 ﻿@model IEnumerable<SanPhamModel>
-@{ ViewData["Title"] = "TimKiemTheoTen";
-                Layout = "~/Views/Shared/_TimKiemLayout.cshtml"; }
+@{ ViewData["Title"] = "Index";
+    Layout = "_ThirdLayout"; }
+
 
 <div id="alertdiv"></div>
+
+
+
 <!-- Products Start -->
 <div class="container-fluid pt-5" style=" margin-top: -50px; margin-left: 0px">
     <div class="container" style="width:100%">
@@ -31,8 +35,18 @@
     </div>
     <div class="card-body">
         <h4><label>Khám phá danh mục</label></h4>
-        <table style="width:90%">
+        <table style="width:100%">
             <tr>
+                <th style="width:15%">
+                    <div class="d-flex align-items-start align-items-sm-center gap-4">
+                        <img src="~/template/img/all.png" style="border-radius:30%"
+                             height="80"
+                             width="80"
+                             id="uploadedAvatar"
+                             onclick="Tatca()" />
+                    </div>
+                    <label>Tất cả danh mục</label>
+                </th>
                 <th style="width:15%">
                     <div class="d-flex align-items-start align-items-sm-center gap-4">
                         <img src="~/template/img/binh nuoc.jpg" style="border-radius:30%"
@@ -40,7 +54,7 @@
                              width="80"
                              onclick="DoCaNhan()" />
                     </div>
-                    <label>Đồ dùng cá nhân</label>
+                    <label>Thời trang</label>
                 </th>
                 <th style="width:15%">
                     <div class="d-flex align-items-start align-items-sm-center gap-4">
@@ -60,7 +74,7 @@
                              id="uploadedAvatar"
                              onclick="DoNoiThat()" />
                     </div>
-                    <label>Đồ nội thất</label>
+                    <label>Gia dụng, nội thất</label>
                 </th>
                 <th style="width:15%">
                     <div class="d-flex align-items-start align-items-sm-center gap-4">
@@ -70,18 +84,9 @@
                              id="uploadedAvatar"
                              onclick="PhuongTien()" />
                     </div>
-                    <label style="margin-left:31px">Xe</label>
+                    <label style="margin-left:31px">Xe cộ</label>
                 </th>
-                <th style="width:15%">
-                    <div class="d-flex align-items-start align-items-sm-center gap-4">
-                        <img src="~/template/img/den-ban-dq-dkl14-b-1.jpg" style="border-radius:30%"
-                             height="80"
-                             width="80"
-                             id="uploadedAvatar"
-                             onclick="DoHocTap()" />
-                    </div>
-                    <label>Đồ dùng học tập</label>
-                </th>
+
                 <th style="width:15%">
                     <div class="d-flex align-items-start align-items-sm-center gap-4">
                         <img src="~/template/img/khac.webp" style="border-radius:30%"
@@ -90,7 +95,7 @@
                              id="uploadedAvatar"
                              onclick="DoKhac()" />
                     </div>
-                    <label>Nổi bật khác</label>
+                    <label>Khác</label>
                 </th>
             </tr>
         </table>
@@ -111,10 +116,10 @@
 <div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
     <div class="card product-item mb-4 sanpham" style="width: 105%">
         <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-            <div style="width: 100%; display: flex;">
-                <div class="tagthoigian">@item.thoigiansp tháng</div>
-                <div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>
-            </div>
+            @*<div style="width: 100%; display: flex;">
+                    <div class="tagthoigian">@item.thoigiansp tháng</div>
+                    <div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>
+                </div>*@
             <img class="img-fluid w-100" src="@item.anhsp[0]" alt="">
         </div>
         <div class="card-body border-left border-right text-center p-0 pt-2 pb-1">
@@ -194,6 +199,11 @@ else
         }, duration);
         document.body.appendChild(el);
     }
+
+    function Tatca() {
+        window.location.href = '/SanPham/Index';
+    }
+
     function DoCaNhan() {
         window.location.href = '/SanPham/DoCaNhan';
     }
@@ -215,8 +225,6 @@ else
     }
 
     function DoKhac() {
-        window.location.href = '/SanPham/DoKhac';
+        window.location.href = '/SanPham/SPMoiNhat';
     }
 </script>
-
-
