--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -63,7 +63,7 @@
     <div class="container-fluid">
         <div class="row border-top px-xl-5" style="margin-left: -70px">
             <div class="col-lg-3 d-none d-lg-block">
-                <ul class="accordion-menu" style="margin-top:0px; position:fixed; width:300px">
+                <ul class="accordion-menu" style="margin-top:0px; width:300px">
                     <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 60px; margin-top: -1px; padding: 0 30px">
                         <h5 class="m-3" style="color: white"><b>Danh mục sản phẩm</b></h5>
                     </a>
@@ -223,13 +223,13 @@
                             </div>
                             <div class="col-md-3 col-6 mt-md-0 mt-3">
                                 <i class="fa fa-facebook-official fa-3x" style="margin-left:50px"></i>
-                                <a href="fa fa-facebook-official">
+                                <a href="https://www.facebook.com/profile.php?id=100021896134790">
                                     <p>Chợ rao vặt sinh viên</p>
                                 </a>
                             </div>
                             <div class="col-md-3 col-6 mt-md-0 mt-3">
                                 <i class="fa fa-phone-square fa-3x" style="margin-left:30px"></i>
-                                <a href="fa fa-facebook-official">
+                                <a href="https://id.zalo.me/account?continue=https%3A%2F%2Fchat.zalo.me%2F%3Fnull">
                                     <p>0949 617 013</p>
                                 </a>
                             </div>
