--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangKy.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangKy.cshtml
@@ -250,7 +250,7 @@
                             </div>
                             <div class="mb-3 form-password-toggle">
                                 <div class="d-flex justify-content-between">
-                                    <label class="form-label" for="password">Mật khẩu</label>
+                                    <label class="form-label" for="password">Xác nhận mật khẩu</label>
 
                                 </div>
                                 <div class="input-group input-group-merge">
@@ -287,7 +287,7 @@
                                        class="form-control"
                                        id="dc"
                                        asp-for="DiaChi" />
-                                <span asp-validation-for="Email" class="text-danger"></span>
+                                <span asp-validation-for="DiaChi" class="text-danger"></span>
                             </div>
 
 
