--- a/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
@@ -83,7 +83,7 @@
                     <div class="card-footer border-secondary bg-transparent">
                         @if (Model.TongGia > 0)
                         {
-                            <button class="btn btn-block btn-primary my-3 py-3" onclick="window.location.href= '/HoaDon/HoaDon'"><h5>Mua hàng</h5></button>
+                            <button class="btn btn-block btn-primary my-3 py-3" onclick="window.location.href= '/HoaDon/HoaDon'"><h5>Xác nhận</h5></button>
                         }
                     </div>
                 </div>
