--- a/QL_CDC-master/QL_CDC/Views/SanPham/PhuongTien.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/PhuongTien.cshtml
@@ -39,7 +39,7 @@
             <tr>
                 <th style="width:15%">
                     <div class="d-flex align-items-start align-items-sm-center gap-4">
-                        <img src="~/template/img/khac.webp" style="border-radius:30%"
+                        <img src="~/template/img/all.png" style="border-radius:30%"
                              height="80"
                              width="80"
                              id="uploadedAvatar"
