--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
@@ -35,7 +35,7 @@
                     <div class="col-md-6 form-group">
                     </div>
                     <div class="col-md-12 form-group">
-                        <label>Địa chỉ giao hàng</label>
+                        <label>Địa chỉ</label>
                         <textarea asp-for="DiaChi" class="form-control" placeholder="Nhập địa chỉ giao hàng của bạn" id="input6" style="min-height: 20vh;" disabled>@Model.DiaChi</textarea>
                     </div>
 
